# docu_integration

./: .gitignore  Cargo.toml  schema.sql
caddy/: Caddyfile
server/: Cargo.toml
server/src/: batch_processor.rs  create_server.rs  db.rs  login_handler.rs  oauth.rs  schema.sql  server.rs  voided.json
server/src/create_server/: api.rs  login.rs  webhook.rs  websocket_handler.rs
shared/: Cargo.toml
shared/src/: lib.rs
src/: batch_processor.rs  connectMsg.json  create_server.rs  db.rs  login_handler.rs  main.rs  oauth.rs  schema.sql  server.rs  webhook.rs  websocket_handler.rs  worker.rs
src/create_server/: admin.rs  api.rs  login.rs  webhook.rs
web/: Cargo.toml  index.html  package-lock.json  package.json
web/src/: App.vue  main.rs
