[package]
name = "docu_integration"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rusqlite = "0.25"
warp = "0.3"
tokio = {version = "1.11", features = ["full"]}
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
reqwest = {version = "0.11", features = ["json"]}
toml = "0.5"
hmac = "0.11"
csv = "1.1"
async-channel = "1.6"
jsonwebtoken = "7.2"
crossbeam-channel = "0.5"
