[package]
name = "docu_integration"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rusqlite = {version ="0.26", features = ["bundled"]}
warp = {version = "0.3", features = ["tls"]}
tokio = {version = "1.15", features = ["full"]}
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
reqwest = {version = "0.11.9", features = ["json"]}
toml = "0.5"
ring = "0.16"
base64 = "0.13"
csv = "1.1"
async-channel = "1.6"
jsonwebtoken = "7.2"
crossbeam-channel = "0.5"
futures = "0.3"
rand = "0.8.5"