[package]
name = "docu_integration"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rusqlite = {version ="0.26", features = ["bundled"]}
tokio = {version = "1.15", features = ["full"]}
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
reqwest = {version = "0.11.9", features = ["json"]}
toml = "0.5"
ring = "0.16"
base64 = "0.13"
csv = "1.1"
async-channel = "1.6"
jsonwebtoken = "7.2"
crossbeam-channel = "0.5"
futures = "0.3"
rand = "0.8.5"
rust-argon2 = "1.0"
dashmap = "5.3"
axum = {version = "0.5", features = ["headers", "http2", "ws"]}
axum-macros = "0.2"
axum-server = {version = "0.4", features = ["tls-rustls"]}
lazy-static = "1.4"
