[package]
name = "docu_integration"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
shared = { path = "../shared"}

rusqlite = {version ="0.28", features = ["bundled"]}
tokio = {version = "1.20", features = ["full"]}
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
reqwest = {version = "0.11", features = ["json"]}
toml = "0.5"
ring = "0.16"
base64 = "0.13"
#csv = "1.1"
async-channel = "1.7"
jsonwebtoken = "8.1"
crossbeam-channel = "0.5"
futures = "0.3"
rand = "0.8"
rust-argon2 = "1.0"
#dashmap = "5.3"
axum = {version = "0.6", features = ["headers", "http2", "ws"]}
#axum-server = {version = "0.4", features = ["tls-rustls"]}
lazy_static = "1.4"
async-recursion = "1.0"
openidconnect = "2"

[profile.release]
lto = true